--- a/app/src/main/res/layout/activity_class_task4n6.xml
+++ b/app/src/main/res/layout/activity_class_task4n6.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ClassTask4">
+    tools:context=".ClassTask4n6">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
